i added file some

--- a/index.html
+++ b/index.html
@@ -55,13 +55,14 @@
             background-color: blueviolet;
        
             padding: 10;
-            list-style: none;
+            /* list-style: none; */
             text-align: center;
 
         }
         .gap-15{
             gap: 15px;
         }
+        
     </style>
 
 </head>
